06-03: Show banner when client is open, notification otherwise

--- a/index.css
+++ b/index.css
@@ -57,3 +57,14 @@ button {
 #btn-push {
     background-color: #efb1ff;
 }
+
+#push-notification {
+    margin-top: 2em;
+    padding: 2em;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: aqua;
+    /* Hide by Default. Only enabled when service worker pushes messages */
+    display: none;
+}
